--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "next": "14.1.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "sass": "^1.71.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.65",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
